# Real-Time-Rendering

./: .gitignore  .gitmodules  CMakeLists.txt  synopsis.md
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
res/shaders/: fragment.glsl  vertex.glsl
res/shaders/2d/: vertex.glsl
res/shaders/3d/: fragment.glsl  fragment_no_color.glsl  fragment_no_texture.glsl  vertex.glsl  vertex_no_color.glsl
res/shaders/cylinder/: vertex.glsl
res/shaders/quat/: vertex.glsl
src/: 2Dtransform.cpp  main.c  main.cpp  shader.cpp  shader.h  tests.cpp  tests.h  threads.c  utils.h
src/math/: generator.py  sz_math.h  test.c
src/quaternions/: basics.cpp  quaternions_basics.cpp  quaternions_slerp.cpp  slerp.cpp
src/shared/: CameraController.cpp  CameraController.h  Framework.cpp  Framework.h  OpenGlObjects.h  Shader.cpp  Shader.h  Utils.h  framework.cpp  framework.h  shader.cpp  shader.h  utils.h
src/shared/shapes/: Cylinder.cpp  Cylinder.h  Pyramid.cpp  Pyramid.h  imgui.ini
src/transforms/: 2Dtransform.cpp  2d_transform.cpp  3Dtransform.cpp  3d_transform.cpp
src/vertex_blending/: ArmAnimation.cpp  vertex_blending.cpp
synopsis/: synopsis.md  transforms.py
